--- a/doi.sty
+++ b/doi.sty
@@ -38,7 +38,7 @@
 %%     Add macro defaulting to new
 %%     https://doi.org/ URL but may be set to old http://dx.doi.org/
 %% November 2019: Iago Giné-Vázquez makes doi shows full URL linked,
-%%     avoiding "doi:" as registration agenciy crossref suggests (look at 
+%%     avoiding "doi:" as registration agency crossref suggests (look at 
 %%     https://www.crossref.org/display-guidelines/ and at APA style blog 
 %%     https://blog.apastyle.org/apastyle/digital-object-identifier-doi/)
 
